compiler/lume_parser/src/snapshots/lume_parser__parser__tests__literal_snapshots@int_hex_positive.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"0x55\")"
---
[
    Expression(
        Literal(
            Int(
                IntLiteral {
                    value: 85,
                    location: Location(
                        0..4,
                    ),
                    kind: I32,
                },
            ),
        ),
    ),
]
