compiler/lume_parser/src/snapshots/lume_parser__parser__tests__literal_snapshots@int_negative.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"-55\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Some(
                Scalar(
                    ScalarType {
                        name: "void",
                        location: Location(
                            13..17,
                        ),
                    },
                ),
            ),
            block: Block {
                statements: [
                    Expression(
                        Literal(
                            Int(
                                IntLiteral {
                                    value: -55,
                                    location: Location(
                                        21..23,
                                    ),
                                    kind: I32,
                                },
                            ),
                        ),
                    ),
                ],
                location: Location(
                    18..25,
                ),
            },
            location: Location(
                0..25,
            ),
            documentation: None,
        },
    ),
]
