compiler/lume_parser/src/snapshots/lume_parser__parser__tests__literal_snapshots@int_oct_negative.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"-0o125\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Some(
                Scalar(
                    ScalarType {
                        name: Path {
                            name: Identifier {
                                name: "void",
                                location: Location(
                                    13..17,
                                ),
                            },
                            root: NamespacePath {
                                path: [],
                                location: Location(
                                    0..0,
                                ),
                            },
                            location: Location(
                                13..17,
                            ),
                        },
                    },
                ),
            ),
            block: Block {
                statements: [
                    Expression(
                        Literal(
                            Int(
                                IntLiteral {
                                    value: -85,
                                    location: Location(
                                        21..26,
                                    ),
                                    kind: I32,
                                },
                            ),
                        ),
                    ),
                ],
                location: Location(
                    18..28,
                ),
            },
            location: Location(
                0..28,
            ),
            documentation: None,
        },
    ),
]
