compiler/lume_parser/src/snapshots/lume_parser__parser__tests__literal_snapshots@int_positive.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"55\")"
---
[
    Expression(
        Literal(
            Int(
                IntLiteral {
                    value: 55,
                    location: Location(
                        0..2,
                    ),
                    kind: I32,
                },
            ),
        ),
    ),
]
