compiler/lume_parser/src/snapshots/lume_parser__parser__tests__loop_snapshots@inf_loop_empty.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"loop { }\")"
---
[
    InfiniteLoop(
        InfiniteLoop {
            block: Block {
                statements: [],
                location: Location(
                    5..8,
                ),
            },
            location: Location(
                0..8,
            ),
        },
    ),
]
