compiler/lume_parser/src/snapshots/lume_parser__parser__tests__loop_snapshots@inf_loop_statement.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"loop { let a = 0; }\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                    location: Location(
                        13..17,
                    ),
                },
            ),
            block: Block {
                statements: [
                    InfiniteLoop(
                        InfiniteLoop {
                            block: Block {
                                statements: [
                                    VariableDeclaration(
                                        VariableDeclaration {
                                            name: Identifier {
                                                name: "a",
                                                location: Location(
                                                    31..32,
                                                ),
                                            },
                                            variable_type: None,
                                            value: Literal(
                                                Int(
                                                    IntLiteral {
                                                        value: 0,
                                                        location: Location(
                                                            35..36,
                                                        ),
                                                        kind: I32,
                                                    },
                                                ),
                                            ),
                                            location: Location(
                                                27..37,
                                            ),
                                        },
                                    ),
                                ],
                                location: Location(
                                    25..39,
                                ),
                            },
                            location: Location(
                                20..39,
                            ),
                        },
                    ),
                ],
                location: Location(
                    18..41,
                ),
            },
            location: Location(
                0..41,
            ),
        },
    ),
]
